@@ -1,4 +1,3 @@
-# For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
 # setting for the stdout layout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -33,16 +32,6 @@ log4j.appender.log_download.Append=true
 log4j.appender.log_download.File=logs/file_download.log
 log4j.appender.log_download.layout=org.apache.log4j.PatternLayout
 log4j.appender.log_download.layout.ConversionPattern=[%d] - %m%n
-
-######## redirects all file download activity into a separate log
-log4j.logger.edu.mcw.rgd.pipelines.PipelineThread=debug, PipelineThread
-log4j.additivity.edu.mcw.rgd.pipelines.PipelineThread=false
-log4j.appender.PipelineThread=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.PipelineThread.DatePattern='.'yyyy-MM-dd
-log4j.appender.PipelineThread.Append=true
-log4j.appender.PipelineThread.File=logs/PipelineThread.log
-log4j.appender.PipelineThread.layout=org.apache.log4j.PatternLayout
-log4j.appender.PipelineThread.layout.ConversionPattern=[%d] - %m%n
 
 ######## annot status
 log4j.logger.annot_status=debug, log_annot_status
@@ -174,12 +163,3 @@ log4j.appender.aliases.File=logs/aliases.log
 log4j.appender.aliases.layout=org.apache.log4j.PatternLayout
 log4j.appender.aliases.layout.ConversionPattern=[%d] - %m%n
 
-######## redirect all spring framework activity into a separate log
-log4j.logger.org.springframework=info, log_spring
-log4j.additivity.org.springframework=false
-log4j.appender.log_spring=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log_spring.DatePattern='.'yyyy-MM
-log4j.appender.log_spring.Append=true
-log4j.appender.log_spring.File=logs/spring.log
-log4j.appender.log_spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_spring.layout.ConversionPattern=[%d] - %m%n
