@@ -1,3 +1,7 @@
+Apr 20, 2020
+  refactored code for handling xdb ids for genes; duplicate HGNC IDs are no longer inserted
+    (when incoming HGNC ID is already assigned to different gene, it won't be inserted)
+
 Mar 23, 2020
   fix in how to get primary ref assemblies
 
